--- a/index.ipynb
+++ b/index.ipynb
@@ -204,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return first_neighbor-second_neighbor"
+    "    return second_neighbor - first_neighbor"
    ]
   },
   {
