--- a/index.ipynb
+++ b/index.ipynb
@@ -250,14 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "    return abs((second_neighbor - first_neighbor))"
    ]
   },
   {
