--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return second_neighbor - first_neighbor"
+    "    return list(map(lambda neighbor: neighbor['avenue'],neighbors))"
    ]
   },
   {
