Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return list(map(lambda neighbor: neighbor[0],neighbors)) - list(map(lambda neighbor: neighbor[1],neighbors))"
+    "    return "
    ]
   },
   {
