--- a/index.ipynb
+++ b/index.ipynb
@@ -204,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return "
+    "    return distance(first_neighbor, second_neighbor)"
    ]
   },
   {
