--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    return abs((second_neighbor - first_neighbor))"
+    "    return abs(distance(first_neighbor, second_neighbor))"
    ]
   },
   {
