--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "   "
+    "    return abs(distance(first_neighbor, second_neighbor))"
    ]
   },
   {
