--- a/index.ipynb
+++ b/index.ipynb
@@ -204,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def street_distance(first_neighbor, second_neighbor):\n",
-    "    return first_neighbor['', second_neighbor)"
+    "    return first_neighbor['street'] -  second_neighbor['street']"
    ]
   },
   {
