--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    return sqr(distance(first_neighbor, second_neighbor))"
+    "    return stree_distance()"
    ]
   },
   {
