Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    "source": [
     "import math\n",
     "def distance(first_neighbor, second_neighbor):\n",
-    "    math.sqrt(distance_betwwen_ne)"
+    "    math.sqrt(distance_betwwen_neighbors_squared())"
    ]
   },
   {
